syntax = "proto3";

package Metadata; 

option java_package = "edu.msu.cse.dkvf.metadata";
option java_outer_classname = "Metadata";

message TgTimeItem { 
	 int32 tg = 1; 
	 int64 time = 2;  
}

message Record {  // A record item
	bytes value = 1;  //value
	int64 ut = 2;     //update time
	int32 sr = 3;     //source replica ID
	int32 tg = 4;     //source replica ID
	repeated TgTimeItem ds_item = 5;  
}


//---------------Client messages---------------
message GetMessage { 
	 string key =1;
	 repeated TgTimeItem ds_item = 2;  
	 int32 cg = 3;
}

message PutMessage {
	 string key = 1;
	 bytes value = 2;
	 repeated TgTimeItem ds_item = 3;  
}


message ClientMessage {
	oneof message_type {
		GetMessage get_message = 1;
		PutMessage put_message = 2;
	}
 }
//-----------------------------------------------

//-----------------Client Reply------------------
message GetReply{
	Record D = 1;
}

message PutReply{
	int64 ut = 1;
	int32 sr = 2; 
	int32 tg = 3; 
}
message ClientReply {
	bool status = 1;
	oneof message_type{
		GetReply get_reply= 2;
		PutReply put_reply= 3;
	}
}
//-----------------------------------------------
//-----------------Server messages---------------
message ReplicateMessage {
	string key = 1; 
	Record D = 2;
	int32 tg = 3; 
}

message HeartbeatMessage {
	int64 time = 1; 
	int32 tg = 2; 
}

message VVMessage {
	string server_id = 1;
	repeated int64 vvItem = 2;	
}

message SVVMessage {
	repeated int64 svvItem = 1;
}

message ServerMessage {
	oneof message_type{
		ReplicateMessage replicate_message = 1;
		HeartbeatMessage heartbeat_message = 2;
		VVMessage vv_message = 3; 
		SVVMessage svv_message = 4;
	}
}
//-----------------------------------------------

